--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
   <input type="text" id="full-address" name="full-address" placeholder="">
   <h3>Street Address</h3>
   <input type="text" id="street" name="street" placeholder="">
+    <h3>Address line 2</h3>
   <div class="address-line2">
-  <h3>Address line 2</h3>
-    <input type="text" id="street2" name="street2" placeholder=""></div>
+    <input type="text" id="street2" name="street2" placeholder="">
+   <input type="text" id="street2" name="street2" placeholder=""></div>
 
 </div>
   </div>
