--- a/index.html
+++ b/index.html
@@ -1,42 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="StyleSheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
+
 <body>
-<section class="form" id="form">
-<form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
-  <input type="hidden" name="access_key" value="8e8f53f5-6563-4e85-ab52-d8e95dce82d6">
-  <div class="formbox">
-    <div></div>
-    <div class="user-info">
-<label for="name">Full Name</label>
-<input type="text" id="name" name="name" placeholder="Enter your name" required>
-<label for="email">Email</label>
-<input type="text" id="email" name="email" placeholder="Enter Your Email" required>
-<label for="phone">Contact Number</label>
-<input type="number" id="phone" name="phone" placeholder="Enter your contact number">
-</div>
-<div class="order-info">
-  <label for="orderid">Order ID</label>
-  <input type="number" id="orderid" name="orderid" placeholder="OrderID">
-  <label for="full-address">Delivery Destination</label>
-  <input type="text" id="full-address" name="full-address" placeholder="">
-  <h3>Street Address</h3>
-  <input type="text" id="street" name="street" placeholder="">
-    <h3>Address line 2</h3>
-  <div class="address-line2">
-    <input type="text" id="street2" name="street2" placeholder="">
-   <input type="text" id="street2" name="street2" placeholder=""></div>
 
-</div>
-  </div>
-<div></div>
+  <section class="form" id="form">
+    <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+      <input type="hidden" name="access_key" value="8e8f53f5-6563-4e85-ab52-d8e95dce82d6">
 
-</section>
-<script src="./script.js"></script>
+      <div class="formbox">
+        <div class="user-info">
+          <label for="name">Full Name</label>
+          <input type="text" id="name" name="name" placeholder="Enter your name" required>
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Enter your email" required>
+          <label for="phone">Contact Number</label>
+          <input type="number" id="phone" name="phone" placeholder="Enter your contact number">
+        </div>
+
+        <div class="order-info">
+          <label for="orderid">Order ID</label>
+          <input type="number" id="orderid" name="orderid" placeholder="Order ID">
+          <label for="full-address">Delivery Destination</label>
+          <input type="text" id="full-address" name="full-address" placeholder="">
+          <h3>Street Address</h3>
+          <input type="text" id="street" name="street" placeholder="">
+          <h3>Address line 2</h3>
+          <div class="address-line2">
+            <input type="text" id="street2" name="street2" placeholder="">
+            <input type="text" id="street3" name="street3" placeholder="">
+
+          </div>
+          <button type="submit" class="submit-btn">Submit</button>
+
+        </div>
+      </div>
+
+    </form>
+  </section>
+
+  <script src="./script.js"></script>
 </body>
+
 </html>
