--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <input type="hidden" name="access_key" value="8e8f53f5-6563-4e85-ab52-d8e95dce82d6">
 
       <div class="formbox">
+        <div class="location-box"><i class='bx bxs-map-pin'></i></div>
+
         <div class="user-info">
           <label for="name">Full Name</label>
           <input type="text" id="name" name="name" placeholder="Enter your name" required>
