--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
       <div class="formbox">
         <div class="location-box"><i class='bx bxs-map-pin'></i></div>
-
+         <div class="title">
+          Order/Track Your Delivery
+         </div>
         <div class="user-info">
           <label for="name">Full Name</label>
           <input type="text" id="name" name="name" placeholder="Enter your name" required>
